@@ -4,6 +4,8 @@ namespace mesmer{
   MesmerEnv::MesmerEnv()
     :beta(1.0/200.), // Initialized to 300 K expressed in cm-1.
     conc(0.0),
+    collisionTemperature(300.0),
+    radiationTemperature(600.0),
     bathGasName(),
     GrainSize(0),
     CellSize(1.0),
@@ -12,7 +14,6 @@ namespace mesmer{
     MaximumTemperature(0.0),
     EMin(0.0),
     EMax(0.0),
-    radiationTemperature(600.0),
     EAboveHill(20.),
     useBasisSetMethod(false),
     nBasisSet(2){}
